--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@
     font-style: normal;
 }
 
+:root {
+    --primary-color: #047aed;
+    --secondary-color: #1c3fa8;
+    --dark-color: #002240;
+    --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
+}
+  
+
 * {
     box-sizing: border-box;
     padding: 0;
