--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ img {
   
 .navbar .flex {
     justify-content: space-between;
+}
 
 /* Showcase */
 .showcase {
@@ -153,3 +154,23 @@ img {
     -moz-transform: skewY(-3deg);
     -ms-transform: skewY(-3deg);
 }
+
+/* Stats */
+.stats {
+    padding-top: 100px;
+  }
+  
+  .stats-heading {
+    max-width: 500px;
+    margin: auto;
+  }
+  
+  .stats .grid h3 {
+    font-size: 35px;
+  }
+  
+  .stats .grid p {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
