--- a/css/style.css
+++ b/css/style.css
@@ -158,19 +158,30 @@ img {
 /* Stats */
 .stats {
     padding-top: 100px;
-  }
+}
   
-  .stats-heading {
+.stats-heading {
     max-width: 500px;
     margin: auto;
-  }
+}
   
-  .stats .grid h3 {
+.stats .grid h3 {
     font-size: 35px;
-  }
+}
   
-  .stats .grid p {
+.stats .grid p {
     font-size: 20px;
     font-weight: bold;
-  }
+}
+
+/* Cli */
+.cli .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+  
+.cli .grid > *:first-child {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+}
   
