--- a/css/style.css
+++ b/css/style.css
@@ -210,4 +210,9 @@ img {
 .languages .card:hover {
     transform: translateY(-15px);
 }
+
+/* Footer */
+.footer .social a {
+    margin: 0 10px;
+}
   
