--- a/css/style.css
+++ b/css/style.css
@@ -230,9 +230,9 @@ img {
     100% {
       transform: translateX(0);
     }
-  }
+}
   
-  @keyframes slideInFromRight {
+@keyframes slideInFromRight {
     0% {
       transform: translateX(100%);
     }
@@ -240,9 +240,9 @@ img {
     100% {
       transform: translateX(0);
     }
-  }
+}
   
-  @keyframes slideInFromTop {
+@keyframes slideInFromTop {
     0% {
       transform: translateY(-100%);
     }
@@ -250,9 +250,9 @@ img {
     100% {
       transform: translateX(0);
     }
-  }
+}
   
-  @keyframes slideInFromBottom {
+@keyframes slideInFromBottom {
     0% {
       transform: translateY(100%);
     }
@@ -260,4 +260,59 @@ img {
     100% {
       transform: translateX(0);
     }
-  }
+}
+
+/* Tablets and under */
+@media (max-width: 768px) {
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+    }
+  
+    .showcase {
+      height: auto;
+    }
+  
+    .showcase-text {
+      text-align: center;
+      margin-top: 40px;
+      animation: slideInFromTop 1s ease-in;
+    }
+  
+    .showcase-form {
+      justify-self: center;
+      margin: auto;
+      animation: slideInFromBottom 1s ease-in;
+    }
+  
+    .cli .grid > *:first-child {
+      grid-column: 1;
+      grid-row: 1;
+    }
+}
+  
+/* Mobile */
+@media (max-width: 500px) {
+    .navbar {
+      height: 110px;
+      
+    }
+
+    .navbar .flex {
+      flex-direction: column;
+      justify-content: center;
+    }
+  
+    .navbar ul {
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+    
+    .showcase-form {
+      width: 300px;
+    }
+}
