--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,43 @@ img {
   justify-self: flex-start;
 }
 
+.features-sub-head  {
+    text-align: justify;
+    direction: rtl;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+  
+.features-main .card > i {
+    margin-right: 20px;
+}
+  
+.features-main .grid {
+    padding: 30px;
+}
+  
+.features-main .grid > *:first-child {
+    grid-column: 1 / span 3;
+}
+  
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
+.features-main p {
+    text-align: justify;
+    direction: rtl;
+}
+
+.features-main i {
+    margin-left: 25px;
+    margin-right: 0px
+}
+  
+
 /* Animations */
 @keyframes slideInFromLeft {
     0% {
