--- a/css/utilities.css
+++ b/css/utilities.css
@@ -101,6 +101,30 @@
   color: var(--light-color);
 }
 
+/* Alert */
+.alert {
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert i {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
+}
+
+
 /* Text sizes */
 .lead {
   font-size: 20px;
