--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,10 @@ pre {
 }
 
 /* Docs */
+.col {
+    text-align: right;
+}
+
 .docs-main h3 {
     margin: 20px 0;
 }
@@ -301,7 +305,7 @@ pre {
 .docs-main div.card {
     text-align: justify;
     direction: rtl;
-  }
+}
 
 /* Animations */
 @keyframes slideInFromLeft {
@@ -350,7 +354,9 @@ pre {
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
       grid-template-columns: 1fr;
       grid-template-rows: 1fr;
     }
@@ -374,6 +380,23 @@ pre {
     .cli .grid > *:first-child {
       grid-column: 1;
       grid-row: 1;
+    }
+
+    .features-head, .col,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid > *:first-child,
+    .features-main .grid > *:nth-child(2) {
+        grid-column: 1;
     }
 }
   
