--- a/css/style.css
+++ b/css/style.css
@@ -382,8 +382,7 @@ pre {
       grid-row: 1;
     }
 
-    .features-head, .col,
-    .features-sub-head,
+    .features-head, .features-sub-head h1, .col,
     .docs-head {
         text-align: center;
     }
@@ -398,6 +397,20 @@ pre {
     .features-main .grid > *:nth-child(2) {
         grid-column: 1;
     }
+
+    .features-head .grid img {grid-area: 2 / 1 / 3 / 2;}
+    
+    .features-head .grid div {grid-area: 1 / 1 / 2 / 2;}
+
+    .docs-head .grid img {grid-area: 2 / 1 / 3 / 2;}
+    
+    .docs-head .grid div {grid-area: 1 / 1 / 2 / 2;}
+    
+    .docs-main .grid div:nth-child(2) {grid-area: 1 / 1 / 2 / 2;}
+
+    .docs-main .grid div:first-child {grid-area: 2 / 1 / 3 / 2;}
+
+     
 }
   
 /* Mobile */
